<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="@dimen/wdp40"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/load_more_loading_view" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ProgressBar android:id="@id/loading_progress" android:layout_width="@dimen/wdp26" android:layout_height="@dimen/wdp26" android:layout_marginRight="@dimen/wdp4" android:indeterminateDrawable="@drawable/loding_progress" style="?android:progressBarStyleSmall" />
        <TextView android:textSize="@dimen/wdp20" android:textColor="#ffa8a8a8" android:id="@id/loading_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/wdp4" android:text="@string/brvah_loading" />
    </LinearLayout>
    <FrameLayout android:id="@id/load_more_load_fail_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="@dimen/wdp22" android:layout_gravity="center" android:id="@id/tv_prompt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/brvah_load_failed" />
    </FrameLayout>
    <FrameLayout android:id="@id/load_more_load_end_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="@dimen/wdp20" android:textColor="@android:color/darker_gray" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/brvah_load_end" />
    </FrameLayout>
</FrameLayout>